cluster/apps/sonarr-route/manual-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
spec:
  ports:
    - protocol: TCP
      port: 8989 # The service port can be anything, but matching is clear.
      targetPort: 8989 # This must match the port in the Endpoints object.
