cluster/apps/sonarr-route/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-route
  namespace: media
  annotations:
    gethomepage.dev/pod-selector: ""
    gethomepage.dev/description: Sonarr
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media Management
    gethomepage.dev/icon: sh-sonarr
    gethomepage.dev/name: Sonarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway
  hostnames:
    - sonarr.internal.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: sonarr-service
          port: 8989
          weight: 1
